--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "basic-auth",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node app.js",
     "watch": "NODE_ENV=development nodemon app.js",
@@ -24,6 +24,7 @@
     "eslint": "^9.2.0",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
